# ai-translator

./: .gitignore  Dockerfile  metrics.json  package-lock.json  package.json  pyproject.toml
src/node/: index.js
src/python/: main.py
src/python/ai_translator/: api.py  main.py
src/python/ai_translator/ocr/: engine.py
src/python/ai_translator/pdf/: convert.py
src/python/ai_translator/translate/: client.py
src/python/ai_translator/utils/: ocr.py  translator.py
