[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-translator"
version = "0.1.0"
description = "AI-powered OCR and translation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.31",
  "tenacity>=8.2",
  "rich>=13.7",
  "pillow>=10.3",
  "fastapi>=0.115",
"uvicorn>=0.30",
"python-multipart = "^0.0.9"",
]

[tool.setuptools.packages.find]
where = ["src/python"]
