[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-translator"
version = "0.1.0"
description = "AI-powered PDF and text translator with OCR and FastAPI interface."
authors = [
    { name = "Luis Parra", email = "your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"

# ---- Dependencies ----
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "pillow",
    "python-multipart",
    "rich",
    "tenacity",
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["ai_translator*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
fix = true
select = ["E", "F", "I"]
exclude = [".venv", "build", "dist"]

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests"]
